# keras-core

./: build.py  pyproject.toml  requirements-cuda.txt
.github/workflows/: actions.yml
keras_core/: version.py
shell/: format.sh  lint.sh
